# VeritasAd

./: .dockerignore  .env.dev  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_VS_THESIS_GAP.md  DEPLOY.md  DEPLOYMENT.md  DEV_STARTUP.md  DOCKER_COMMANDS.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  PDF DOCX GIT INTELLIGENCE SYSTEM PROMPT.md  RAILWAY_DEPLOY.md  README.md  README_PRODUCTION.md  SETUP.txt  ULTIMATE PROMPT V3.md  WORK_SUMMARY.md  alembic.ini  architecture-refactor-scalable-structure-system-prompt.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  environment.yml  setup_uv.ps1  setup_uv.sh  start_local.bat  start_local.ps1
.claude/: settings.local.json
backend/: .dockerignore  .env.dev  .env.example  .env.production.example  .env.test  CHECKLIST.md  Dockerfile  Dockerfile.dev  README.md  VERIFICATION.md  _run_veritas.py  alembic.ini  auth.py  celery_app.py  database.py  entrypoint.sh  fix_nulls.py  gunicorn_conf.py  main.py  models.py  pyproject.toml  requirements.txt  settings.py  storage.py  tasks.py
backend/alembic/: env.py
backend/alembic/versions/: 001_add_supabase_auth_and_roles.py  002_add_ad_classification_fields.py  003_add_social_source_types.py  004_add_api_key_hash_for_security.py  005_add_audit_logs_table.py  006_add_telegram_integration_fields.py  007_add_pay_as_you_go_system.py  008_add_custom_brands_table.py  009_add_analyses_method_column.py  010_add_analyses_erids_promo_codes.py  011_add_users_metadata_column.py  012_add_analysis_link_fields.py  013_add_jsonb_arrays_and_gin.py  014_add_user_hashed_password.py  015_add_analysis_claims.py  14be8e0e6414_add_full_analysis_metadata_v2.py  1917a5633a69_add_full_analysis_metadata.py  3a2964894d9a_add_analysis_metadata_fields.py  52d80393a44d_add_full_analysis_metadata_v2.py
backend/app/: main.py
backend/app/api/v1/: admin.py  analyze.py  auth.py  brands.py  health.py  progress.py  report.py  router.py  telegram.py  upload.py  users.py
backend/app/core/: celery.py  config.py  dependencies.py  errors.py  observability.py  rbac.py  redis.py  security.py
backend/app/domains/: __init__.py
backend/app/domains/admin/: __init__.py  router.py  schemas.py
backend/app/domains/analysis/: __init__.py  analyze_router.py  dependencies.py  progress_router.py  report_router.py  repository.py  service.py
backend/app/domains/auth/: __init__.py  dependencies.py
backend/app/domains/claims/: __init__.py  dependencies.py  router.py  service.py
backend/app/domains/health/: __init__.py  router.py
backend/app/domains/payment/: __init__.py  router.py  schemas.py
backend/app/domains/security/: __init__.py  router.py
backend/app/domains/telegram/: __init__.py  repository.py  schemas.py  service.py
backend/app/domains/upload/: __init__.py  router.py
backend/app/domains/users/: __init__.py  router.py  schemas.py
backend/app/middleware/: admin_rate_limit.py  cors.py  ip_whitelist.py  rate_limit.py  security.py
backend/app/ml/: __init__.py  ad_batch.py  ad_dataset.py  ad_model.py
backend/app/models/: __init__.py  database.py  database.py.backup
backend/app/schemas/: analysis.py  brand.py  claims.py  user.py  video.py
backend/app/services/: ad_model_scorer.py  aggregator.py  analytics_service.py  audio_analyzer.py  audit_logger.py  brand_ocr.py  checkworthiness_scorer.py  claim_classifier.py  claim_export.py  claim_extractor.py  claim_fewshot.py  claim_normalizer.py  cloud_brand_detector.py  disclosure_detector.py  export_service.py  link_detector.py  llm_service.py  model_manager.py  report_generator.py  session_manager.py  social_parsers.py  two_factor_auth.py  video_download_errors.py  video_processor.py  web_searcher.py
backend/app/tasks/: video_analysis.py
backend/app/utils/: ad_classification.py  logger.py  telegram_auth.py
backend/cookies/: youtube_cookies.txt
backend/migrations/: env.py
backend/migrations/versions/: 20241229_0001_create_jobs.py
backend/routers/: __init__.py  analyze.py  jobs.py  train.py  upload.py
backend/schemas/: __init__.py  job.py
backend/scripts/: auto_annotate.py  build_balanced_training_dataset.py  collect_ad_training_batch.py  migrate_api_keys.py  ml_pipeline.py  refresh_youtube_cookies.py  run_cookie_refresh_loop.sh  train_audio_knn.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/api/: test_health.py
backend/tests/load/: locustfile.py
backend/tests/unit/: test_ad_batch.py  test_ad_classification.py  test_analysis_helpers.py  test_ml_dataset.py  test_ml_model.py  test_video_download_progress.py
backend/tests/unit/domains/analysis/: test_service.py
backend/tests/unit/schemas/: test_claims_schema.py
backend/tests/unit/security/: test_password.py  test_security_fixes.py
backend/tests/unit/services/: test_aggregator.py  test_audio_mfcc.py  test_checkworthiness_scorer.py  test_claim_classifier.py  test_claim_export.py  test_claim_extractor.py  test_claim_normalizer.py  test_claims_service.py  test_link_detector.py  test_social_parsers.py
backend/utils/: platform.py
bot/: .dockerignore  .env.dev  .env.example  .env.production.example  Dockerfile  Dockerfile.dev  README.md  config.py  keyboards.py  main.py  pyproject.toml  requirements.txt
bot/handlers/: __init__.py  analyze.py  link.py  profile.py  start.py
bot/services/: __init__.py  api_client.py  auth_service.py
data/: brands.example.json  brands_global.json
docs/: ai-learning-loop.md  architecture-evolution.md  changelog.md  cto-roadmap.md  current-architecture-map.md  (+24 more)
parsers/: README.md  __init__.py  instagram_parser.py  pyproject.toml  requirements.txt  telegram_parser.py  vk_parser.py  youtube_parser.py
research/: README.md  pyproject.toml
research/corpus/: __init__.py  cli.py  erid_miner.py  labeler.py  manifest.py  schema.py
research/corpus/fetchers/: __init__.py  base.py  ytdlp_fetcher.py
research/data/: sources.example.jsonl
research/tests/: test_cli.py  test_erid_miner.py  test_labeler.py  test_manifest.py  test_schema.py  test_ytdlp_fetcher.py
research/tests/fixtures/: ytdlp_info_sample.json
(+434 files in other folders)
