[project]
name = "veritasad-backend"
version = "1.0.0"
description = "Neural network-based advertising detection system API"
authors = [{name = "VeritasAd Team", email = "dabinayo@pm.me"}]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    # FastAPI framework
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",

    # Async database
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.29.0",
    "alembic==1.14.0",
    "greenlet==3.1.1",

    # Redis and task queue
    "redis[hiredis]==5.2.0",
    "celery[redis]==5.4.0",
    "flower==2.0.1",

    # Rate limiting
    "slowapi==0.1.9",
    "limits==3.13.0",

    # Logging
    "structlog==24.4.0",
    "python-json-logger==3.1.0",

    # Video processing
    "yt-dlp==2024.11.18",
    "opencv-python-headless==4.10.0.84",
    "ffmpeg-python==0.2.0",

    # Machine Learning
    "torch==2.5.1",
    "transformers==4.46.2",
    "sentencepiece==0.2.0",
    "openai-whisper==20231117",
    "accelerate==1.1.1",

    # Audio processing
    "librosa==0.10.2.post1",

    # PDF generation
    "reportlab==4.2.5",
    "pillow==11.0.0",

    # OCR
    "pytesseract==0.3.13",

    # Utilities
    "numpy==1.26.4",
    "requests==2.32.3",
    "httpx==0.27.2",
    "aiofiles==24.1.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.27.2",
    "black==24.10.0",
    "ruff==0.7.4",
    "mypy==1.13.0",
    "pre-commit==4.0.1",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
asyncio_mode = "auto"
addopts = "-v --cov=app --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__pycache__/*", "*/venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
