[project]
name = "veritasad-backend"
version = "1.0.0"
description = "Neural network-based advertising detection system API"
authors = [{name = "VeritasAd Team", email = "dabinayo@pm.me"}]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]==0.32.1",
    "gunicorn==23.0.0",
    "pydantic==2.10.0",
    "pydantic-settings==2.7.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "slowapi==0.1.9",
    "structlog==24.4.0",
    "sqlalchemy[asyncio]==2.0.36",
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "aiosqlite==0.20.0",
    "redis[hiredis]==5.2.0",
    "celery[redis]==5.4.0",
    "flower==2.0.1",
    "yt-dlp==2025.12.8",
    "opencv-python-headless==4.11.0.86",
    "ffmpeg-python==0.2.0",
    "torch==2.9.1",
    "transformers==4.57.3",
    "sentencepiece==0.2.1",
    "faster-whisper==1.0.3",
    "accelerate==1.1.1",
    "librosa==0.11.0",
    "reportlab==4.3.0",
    "pillow==11.0.0",
    "pytesseract==0.3.13",
    "python-telegram-bot==21.5",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "numpy==2.1.2",
    "requests==2.32.3",
    "httpx==0.28.0",
    "aiofiles==24.1.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "PyJWT==2.9.0",
    "pyqrcode==1.2.1",
    "pypng==0.20220715.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "black==24.10.0",
    "ruff==0.8.0",
    "mypy==1.13.0",
    "pre-commit==4.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]


[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
asyncio_mode = "auto"
addopts = "-v --cov=app --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__pycache__/*", "*/venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]