[project]
name = "veritasad-bot"
version = "1.0.0"
description = "Telegram Bot for VeritasAd"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiogram==3.13.1",
    "aiohttp==3.10.10",
    "aiofiles==24.1.0",
    "httpx==0.27.2",
    "redis[hiredis]==5.2.0",
    "python-dotenv==1.0.1",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "structlog==24.4.0",
    "python-json-logger==3.1.0",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["handlers", "middlewares", "services"]
py-modules = ["main", "config", "keyboards"]
